--- a/interface/index.html
+++ b/interface/index.html
@@ -17,6 +17,15 @@
     <div class="panel__switcher"></div>
 
   </div>
+  <div class="panel__left">
+    <div class="panel__left__btn__container">
+      <button id="btn-add">Add</button>
+      <button id="btn-cms">CSM</button>
+      <button>Data base</button>
+    </div>
+    <div id="panel__left__element__container" class="panel__left__element__container"></div>
+
+  </div>
   <div id="blocks"></div>
   <div class="editor-row">
     <div class="editor-canvas">
